Change file tree. re-add HTML form

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,12 @@
       two
     </pre>
     <form>
-      <label for="entry"></label>
-      <input id="entry" type="text" name="entry">
+      <select name="options" id="options">
+        <option value="MXN">Mexican Peso</option>
+        <option value="XPF">Franc</option>
+        <option value="MGA">MAlagasy Araiary</option>
+        <option value="GTQ">Guatamalan Quetzal</option>
+      </select>
       <button type="submit" class="btn-success" id="entrybutton">Translate</button>
     </form>
     <p id="showResponse"></p>
