WIP resolving Can't resolve 'html-loader'

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       two
     </pre>
     <form>
-      <select name="options" id="options">
+      <select name="entry" id="entry">
         <option value="MXN">Mexican Peso</option>
         <option value="XPF">Franc</option>
         <option value="MGA">MAlagasy Araiary</option>
